gobmkida/c1/second_order_liberty_of_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/second_order_liberty_of_string/src/engine/board.c:2887:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[v4] == v5 && string[239].neighborlist[v4 + 160] == string_number[str] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/second_order_liberty_of_string/src/engine/board.c:2888:4: error: use of undeclared identifier 'byte_9AA88C'
|| byte_9AA88C[v4] == v5 && string[239].neighborlist[v4 + 141] == string_number[str] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/second_order_liberty_of_string/src/obj/1/board.o] Error 1
